# sicsr_timetable

./: README.md  config.toml  data.csv  example.md  pyproject.toml
sicsr_timetable/: __main__.py  core.py
tests/: __init__.py
