[tool.poetry]
name = "sicsr-timetable"
version = "0.1.0"
description = ""
authors = ["Aman Phatak <phatakaman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
requests = "^2.31.0"
pydantic = "^2.5.3"
tabulate = "^0.9.0"
textual = "^0.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
